# SDL-OpenGL-Game-Framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.frag  default.vert  project_template.cbp
.github/workflows/: main.yml
data/: settings.ini
data/fonts/: PT Mono license.txt
data/textures/: bit.tga  cursor.tga
docs/: README.md  guide.md
docs/diagrams/: ArchitectureDiagram.pptx  MainUiManagerClassDiagram.pptx  ModelClassDiagram.pptx  SceneClassDiagram.pptx  UiManagerClassDiagram.pptx
src/: CMakeLists.txt  Timer.cpp  Timer.hpp  basicmath.cpp  basicmath.hpp  main.cpp
src/MainApp/: MainApp.cpp  MainApp.hpp  MessageHandler.cpp  MessageHandler.hpp
src/MainUiManager/: Init.cpp  InitFont.cpp  InitOpenGL.cpp  InitRenderer.cpp  InitTextures.cpp  InitWindow.cpp  Input.cpp  InputState.cpp  InputState.hpp  MainUiManager.cpp  MainUiManager.hpp  MouseState.cpp  MouseState.hpp  Render.cpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp
src/Message/: Message.cpp  SceneTransitMessage.cpp  SceneTransitMessage.hpp
src/Scene/: GameScene.cpp  GameScene.hpp  GameSceneDraw.cpp  GameSceneInput.cpp  GameSceneUpdate.cpp  MenuScene.cpp  MenuScene.hpp  MenuSceneDraw.cpp  MenuSceneInput.cpp  MenuSceneUpdate.cpp  Scene.cpp  Scene.hpp
src/Scene/Model/: Entity.cpp  Entity.hpp  EntityManager.hpp  Explosion.cpp  Explosion.hpp  GameModelManager.cpp  GameModelManager.hpp  Map.cpp  Map.hpp  MenuModelManager.cpp  MenuModelManager.hpp  Mob.cpp  Mob.hpp  MobAi.cpp  MobAi.hpp  ModelManager.cpp  ModelManager.hpp  Particle.cpp  Particle.hpp  Projectile.cpp  Projectile.hpp  Weapon.cpp  Weapon.hpp
src/Scene/Widget/: GuiRegion.cpp  GuiRegion.hpp  LabelWidget.cpp  LabelWidget.hpp  Widget.cpp  Widget.hpp  WidgetManager.cpp  WidgetManager.hpp
src/system/: MainApp.cpp  MainApp.hpp  Message.cpp  Message.hpp  MessageBroker.hpp  MessageHandler.cpp  MessageHandler.hpp  SceneTransitMessage.cpp  Settings.cpp  Settings.hpp  main.cpp
src/ui/: Draw.cpp  FontId.hpp  GLUtil.cpp  GLUtil.hpp  Init.cpp  InitFont.cpp  InitOpenGL.cpp  InitRenderer.cpp  InitSDL.cpp  InitTextures.cpp  InitWindow.cpp  Input.cpp  InputState.hpp  MainUiManager.cpp  MainUiManager.hpp  ModelCamera.cpp  ModelCamera.hpp  Render.cpp  ShaderProgram.cpp  ShaderProgram.hpp  Sprite.cpp  Sprite.hpp  SpriteId.hpp  SpriteLoad.cpp  SpriteManager.cpp  SpriteManager.hpp  TextManager.cpp  TextManager.hpp  Texture.cpp  Texture.hpp  UiManager.cpp  UiManager.hpp  default.frag  default.vert
src/util/: Timer.cpp  Timer.hpp  math.cpp  math.hpp
